trigger/force-app/main/default/objects/TriggerHandlerConfig__mdt/fields/Flow_Active__c.field-meta.xml
<CustomField>
    <fullName>Flow_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Flow defined on this handler configuration.</description>
    <label>Flow Active</label>
    <type>Checkbox</type>
</CustomField>