trigger/force-app/main/default/objects/TriggerHandlerConfig__mdt/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <description>API name of the autolaunched Flow executed by this handler configuration.</description>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>