trigger/force-app/main/default/objects/TriggerHandlerConfig__mdt/fields/Flow_Run_Context__c.field-meta.xml
<CustomField>
    <fullName>Flow_Run_Context__c</fullName>
    <defaultValue>"After"</defaultValue>
    <description>Trigger context in which the Flow runs for this handler configuration.</description>
    <label>Flow Run Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Before</fullName><default>false</default><label>Before</label></value>
            <value><fullName>After</fullName><default>true</default><label>After</label></value>
            <value><fullName>Both</fullName><default>false</default><label>Both</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>